app/main/default/objects/object80__c/fields/testfield103__c.field-meta.xml
<CustomObject>
    <fields>
        <fullName>testfield103__c</fullName>
        <description>Test</description>
        <label>testfield103</label>
        <length>42</length>
        <type>Text</type>
    </fields>
</CustomObject>