app/main/default/objects/object80__c/fields/testfield108__c.field-meta.xml
<CustomObject>
    <fields>
        <fullName>testfield108__c</fullName>
        <description>Test</description>
        <label>testfield108</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>first</fullName>
                    <default>true</default>
                    <label>first</label>
                </value>
                <value>
                    <fullName>second</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
</CustomObject>